# xdg-user-dirs-gtk

./: .gitlab-ci.yml  ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  NEWS  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  meson.build  meson_custom_install_desktop_file.sh  parse.c  parse.h  update.c  user-dirs-update-gtk.desktop  user-dirs-update-gtk.desktop.in  user-dirs-update-gtk.service.in  xdg-user-dirs-gtk.doap
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  ar.po  be.po  bs.po  ca.po  crh.po  cs.po  da.po  de.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  hi.po  hr.po  hu.po  ie.po  is.po  it.po  ja.po  ka.po  kab.po  kw.po  lt.po  meson.build  ms.po  nb.po  ne.po  nl.po  oc.po  pa.po  pl.po  (+9 more)
